[project]
name = "claude-chat-export"
version = "0.1.0"
description = "Convert Claude.ai chat exports (HTML) to Markdown, including artifacts"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "click>=8.1",
    "playwright>=1.44",
    "aiofiles>=23.2",
    "rich>=13.7",
]

[project.scripts]
claude-chat-export = "claude_chat_md.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_chat_md"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
